# downloads-organizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/: pypi-setup.md
downloads_organizer/: __init__.py  classifier.py  cli.py  config.py  daemon.py  notifier.py  watcher.py
tests/: test_classifier.py  test_config.py  test_watcher.py
